--- a/Project Euler Solutions/txtstyle.css
+++ b/Project Euler Solutions/txtstyle.css
@@ -1,1 +1,1 @@
-html, body { font-family: Helvetica, Arial, sans-serif; white-space: pre-wrap; }
+html, body { font-family: Serif; white-space: pre-wrap; font-size: 40px;}
