--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 h1 {
   color: #0c64c9;
-  margin: 10px auto; }
+  margin: 10px auto;
+  border: 10px; }
 
 /*# sourceMappingURL=stylesheet.css.map */
