--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 h1 {
   color: #0c64c9;
   margin: 10px auto;
-  border: 10px auto; }
+  border: 10px solid #94d1e4; }
 
 /*# sourceMappingURL=stylesheet.css.map */
