changed border color

--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -1,7 +1,7 @@
 $myMargin: 10px auto;
 $myColor: #0c64c9;
 $myWidth: 600px;
-$myBorder: 10px solid #94d1e4;
+$myBorder: 10px solid red;
 
 h1 {
 	color: $myColor;
