--- a/Project Euler Solutions/txtstyle.css
+++ b/Project Euler Solutions/txtstyle.css
@@ -1,1 +1,5 @@
-html, body { font-family: Consolas; white-space: pre-wrap; font-size: 20px;}
+html, body {
+	font-family: Consolas; 
+	white-space: pre-wrap; 
+	font-size: 20px;
+}
